@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.11 2010-07-15 15:20:28 pertusus Exp $
+# $Id: Makefile.am,v 1.12 2012-06-11 17:54:28 karl Exp $
 # Makefile.am for texinfo/makeinfo.
 # Run automake in .. to produce Makefile.in from this.
 #
@@ -21,7 +21,7 @@ AM_CPPFLAGS = 					\
   -I$(top_srcdir)/gnulib/lib 			\
   -I$(top_builddir)/gnulib/lib			\
   -DLOCALEDIR=\"$(localedir)\"
-LDADD = ../lib/libtxi.a $(top_builddir)/gnulib/lib/libgnu.a $(LIBINTL)
+LDADD = $(top_builddir)/gnulib/lib/libgnu.a $(LIBINTL)
 
 makeinfo_SOURCES = \
   cmds.c cmds.h defun.c defun.h \
